--- a/Heartbeat-animation/index.html
+++ b/Heartbeat-animation/index.html
@@ -11,7 +11,10 @@
     <div class="container">
         <div class="box"></div>
         <h3 class="text">ITmindSpace</h3>
-        
+    </div>
+    <div class="notification">
+        <p>Press the red box</p>
+        <span class="notification-progress"></span>
     </div>
 </body>
 </html>
