--- a/Notification-popup-animation/index.html
+++ b/Notification-popup-animation/index.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Pop-up</title>
+
 </head>
 <body>
+    <div class="text"> This is a wonderful way to spend time.</div>
     <div class="notification">
-        <p>Hey, Welcome back!</p>
+        <p>Hey, Welcome back! </p>
+        
         <span class="notification-progress"></span>
     </div>
 </body>
