--- a/Notification-popup-animation/index.html
+++ b/Notification-popup-animation/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="text"> This is a wonderful way to spend time.</div>
     <div class="notification">
-        <p>Hey, Welcome back! </p>
+        <p>Hey, Welcome back! <i class="bi bi-emoji-smile"></i></p>
         
         <span class="notification-progress"></span>
     </div>
