Added body content

--- a/Notification-popup-animation/index.html
+++ b/Notification-popup-animation/index.html
@@ -9,6 +9,7 @@
 
 </head>
 <body>
+    <h1>Reading Novels</h1>
     <div class="text"> This is a wonderful way to spend time.</div>
     <div class="notification">
         <p>Hey, Welcome back! <i class="bi bi-emoji-smile"></i></p>
