--- a/Notification-popup-animation/index.html
+++ b/Notification-popup-animation/index.html
@@ -8,8 +8,22 @@
     <title>Pop-up</title>
 </head>
 <body>
-    <h1>Reading Novels</h1>
-    <div class="text"> This is a wonderful way to spend time.</div>
+    <h1>Epigenetics Article</h1>
+    <div class="text">Epigenetics studies how environments and behaviors such as physical activeness, 
+        dietary, and substance usage cause changes that alter the way genes function without changing 
+        the DNA sequence. Genes are a unit of heredity passed from parent to offspring made of
+         sequences of DNA. Genes play a crucial role in health but so do environments and behaviors. 
+         From the video, it is clear that lifestyles and diets change the expression of genes. 
+         Twins, especially identical twins, have the same DNA and genes as they come from the same egg.
+          As twins grow and develop, they start to diverge in their appearance and health.
+           According to the study, as we age based on twins, our epigenetic differences accumulate 
+           depending on our lifestyles. This is why we have cases of hereditary diseases being prone 
+           to family members who live similar lifestyles to those who had them and skipping other
+            family members. It also explains the cases of one twin having a genetic disease or 
+            disorder and the other being healthy such as the case of Annamarie and Clotilde from 
+            the video. Like in this case study of the twins, so do close family members have similar 
+            genes, that is, parents and siblings. However, as we grow old and relocate, we alter our 
+            gene functionality depending on our lifestyles and environments... </div>
     <div class="notification">
         <p>Hey, Welcome back! <i class="bi bi-emoji-smile"></i></p>
         
