--- a/Notification-popup-animation/index.html
+++ b/Notification-popup-animation/index.html
@@ -15,7 +15,7 @@
          sequences of DNA. Genes play a crucial role in health but so do environments and behaviors. 
          From the video, it is clear that lifestyles and diets change the expression of genes. 
          Twins, especially identical twins, have the same DNA and genes as they come from the same egg.
-          As twins grow and develop, they start to diverge in their appearance and health.
+          As twins grow and develop, they start to diverge in their appearance and health.<br>
            According to the study, as we age based on twins, our epigenetic differences accumulate 
            depending on our lifestyles. This is why we have cases of hereditary diseases being prone 
            to family members who live similar lifestyles to those who had them and skipping other
