--- a/Link-hover-animation/index.html
+++ b/Link-hover-animation/index.html
@@ -16,5 +16,9 @@
         <li><a href="#">My Services</a></li>
         <li><a href="#">Contact</a></li>
     </ul>
+    <div class="biography">
+        I am a web developer, Python programmer, tech enthuthiast, data analyst in Python, Artificial 
+        Intelligence and Machine Learning...
+    </div>
 </body>
 </html>
