--- a/Toggle button animation/index.html
+++ b/Toggle button animation/index.html
@@ -10,7 +10,8 @@
 <body>
     <label>
         <input type="checkbox">
-        
+        <i class="bi bi-emoji-smile"></i>
+
     </label>
 </body>
 </html>
