--- a/Toggle button animation/index.html
+++ b/Toggle button animation/index.html
@@ -11,7 +11,7 @@
     <label>
         <input type="checkbox">
         <i class="bi bi-emoji-smile"></i>
-
+        <span class="toggle"></span>
     </label>
 </body>
 </html>
