--- a/Toggle button animation/index.html
+++ b/Toggle button animation/index.html
@@ -10,6 +10,7 @@
 <body>
     <label>
         <input type="checkbox">
+        <i class="bi bi-sun"></i>
         <i class="bi bi-emoji-smile"></i>
         <span class="toggle"></span>
     </label>
