--- a/Toggle button animation/index.html
+++ b/Toggle button animation/index.html
@@ -10,8 +10,8 @@
 <body>
     <label>
         <input type="checkbox">
-        <i class="bi bi-sun"></i>
-        <i class="bi bi-emoji-smile"></i>
+        <i class="bi bi-sun sun"></i>
+        <i class="bi bi-moon moon"></i>
         <span class="toggle"></span>
     </label>
 </body>
