--- a/Toggle button animation/index.html
+++ b/Toggle button animation/index.html
@@ -13,6 +13,7 @@
         <i class="bi bi-sun sun"></i>
         <i class="bi bi-moon moon"></i>
         <span class="toggle"></span>
+        <span class="animateBg"></span>
     </label> 
 </body>
 </html>
