--- a/Toggle button animation/index.html
+++ b/Toggle button animation/index.html
@@ -11,7 +11,7 @@
     <label>
         <input type="checkbox">
         <i class="bi bi-sun sun"></i>
-        <i class="bi bi-moon moon"></i>
+        <i class="bi bi-moon-fill moon"></i>
         <span class="toggle"></span>
         <span class="animateBg"></span>
     </label> 
