--- a/JavaScript Toggle Button/index.html
+++ b/JavaScript Toggle Button/index.html
@@ -11,5 +11,12 @@
     <div id="toggle">
         <i class="indicator"></i>
     </div>
+
+    <script>
+        const toggle = document.getElementById('toggle');
+        toggle.onclick = function(){
+            toggle.classList.toggle('active')
+        }
+    </script>
 </body>
 </html>
